--- a/hrm-frontend/package.json
+++ b/hrm-frontend/package.json
@@ -16,18 +16,21 @@
     "next": "15.3.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "tailwind-animate": "^0.2.10",
     "tailwind-merge": "^3.2.0",
+    "tailwindcss": "^3.3.0",
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "^4",
+    "@types/json-schema": "^7.0.15",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "autoprefixer": "^10.4.21",
     "eslint": "^9",
     "eslint-config-next": "15.3.1",
-    "tailwindcss": "^4",
+    "postcss": "^8.5.3",
     "typescript": "^5"
   }
 }
