--- a/hrm-backend/nginx/conf.d/app.conf
+++ b/hrm-backend/nginx/conf.d/app.conf
@@ -8,7 +8,7 @@ server {
     }
 
     location ~ \.php$ {
-        fastcgi_pass 127.0.0.1:9000;
+        fastcgi_pass https://hrm-web-app-gha1.onrender.com;
         include fastcgi_params;
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
     }
