fix(test): use app service name and port

--- a/hrm-backend/nginx/conf.d/app.conf
+++ b/hrm-backend/nginx/conf.d/app.conf
@@ -8,7 +8,7 @@ server {
     }
 
     location ~ \.php$ {
-        fastcgi_pass http://hrm-web-app-gha1.onrender.com;
+        fastcgi_pass http://app:9000;
         include fastcgi_params;
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
     }
