--- a/hrm-backend/nginx/conf.d/app.conf
+++ b/hrm-backend/nginx/conf.d/app.conf
@@ -8,8 +8,10 @@ server {
     }
 
     location ~ \.php$ {
-        fastcgi_pass http://app:9000;
-        include fastcgi_params;
-        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+        proxy_pass https://hrm-web-app-gha1.onrender.com;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
     }
 }
