--- a/hrm-backend/nginx/Dockerfile
+++ b/hrm-backend/nginx/Dockerfile
@@ -1,6 +1,8 @@
 FROM nginx:alpine
+# Remove the default config
+RUN rm /etc/nginx/conf.d/default.conf
+# Add your custom config
 COPY ./conf.d /etc/nginx/conf.d
-
-# Add a script to update the app upstream at runtime
+# Add the update script
 COPY ./update-upstream.sh /docker-entrypoint.d/
 RUN chmod +x /docker-entrypoint.d/update-upstream.sh
