--- a/hrm-backend/docker-compose.yml
+++ b/hrm-backend/docker-compose.yml
@@ -2,7 +2,7 @@ services:
   app:
     build:
       context: .
-      dockerfile: Dockerfile
+      dockerfile: Dockerfile.dev
     container_name: health-app
     volumes:
       - ./:/var/www/html
@@ -17,7 +17,7 @@ services:
     ports:
       - "8080:80"
     volumes:
-      - ./nginx/conf.d:/etc/nginx/conf.d
+      - ./nginx.local/conf.d:/etc/nginx/conf.d
       - ./:/var/www/html
     depends_on:
       - app
