--- a/hrm-frontend/package.json
+++ b/hrm-frontend/package.json
@@ -10,12 +10,15 @@
   },
   "dependencies": {
     "@radix-ui/react-avatar": "^1.1.7",
+    "axios": "^1.9.0",
+    "axios-retry": "^4.5.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.503.0",
     "next": "15.3.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "sonner": "^2.0.3",
     "tailwind-animate": "^0.2.10",
     "tailwind-merge": "^3.2.0",
     "tailwindcss": "^3.3.0",
