--- a/hrm-frontend/package.json
+++ b/hrm-frontend/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@radix-ui/react-avatar": "^1.1.7",
+    "@tanstack/react-query": "^5.75.0",
     "axios": "^1.9.0",
     "axios-retry": "^4.5.0",
     "class-variance-authority": "^0.7.1",
